--- a/mysite/mainApp/templates/mainApp/productedit.html
+++ b/mysite/mainApp/templates/mainApp/productedit.html
@@ -3,7 +3,7 @@
 
 {% block title %}
   {% if pk %}
-    Редактированиее палатки
+    Редактировать палатку
   {% else %}
     Добавить палатку
   {% endif %}
