--- a/mysite/mainApp/templates/mainApp/productinfo.html
+++ b/mysite/mainApp/templates/mainApp/productinfo.html
@@ -24,7 +24,7 @@
 
 			</div>
 			<div class="model-info">
-				<p>Производитель: {{singleTent.PK_Brand}}</p>
+				<p>Бренд: {{singleTent.PK_Brand}}</p>
 				<h5>Цена: {{singleTent.price}} руб.</h5>
 				<p>
 					Описание: {{singleTent.description}}
